feat UI添加识别按钮与结果框

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -27,13 +27,26 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="labelRes">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>340</y>
+      <width>771</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
       <x>880</x>
       <y>40</y>
       <width>101</width>
-      <height>170</height>
+      <height>205</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -62,6 +75,13 @@
       <widget class="QPushButton" name="Property">
        <property name="text">
         <string>属性</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="ButtonDetect">
+       <property name="text">
+        <string>识别</string>
        </property>
       </widget>
      </item>
