--- a/UI/mainwindow.ui
+++ b/UI/mainwindow.ui
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>340</y>
+      <y>530</y>
       <width>771</width>
       <height>121</height>
      </rect>
@@ -40,7 +40,7 @@
      <string>TextLabel</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>880</x>
