feat:增加识别按钮点击时roi截取功能，只截obj[0]

--- a/UI/mainwindow.ui
+++ b/UI/mainwindow.ui
@@ -17,8 +17,8 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>880</x>
-      <y>40</y>
+      <x>740</x>
+      <y>10</y>
       <width>101</width>
       <height>231</height>
      </rect>
@@ -103,7 +103,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>RadioButton</string>
+         <string>原图</string>
         </property>
        </widget>
        <widget class="QRadioButton" name="radioButton_2">
@@ -116,7 +116,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>RadioButton</string>
+         <string>检测图</string>
         </property>
        </widget>
        <widget class="QLabel" name="labelRes">
@@ -148,6 +148,29 @@
     <property name="text">
      <string>显示区域</string>
     </property>
+   </widget>
+   <widget class="QWidget" name="widget_2" native="true">
+    <property name="geometry">
+     <rect>
+      <x>759</x>
+      <y>269</y>
+      <width>341</width>
+      <height>261</height>
+     </rect>
+    </property>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>8</x>
+       <y>8</y>
+       <width>331</width>
+       <height>251</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>ROI</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
